Added comments and changed isBlank() method for heroku deplpoyement